fixed several github build errors and issues w/ nuget not updating proj files correctly

--- a/src/TestEncCnvtrs/packages.config
+++ b/src/TestEncCnvtrs/packages.config
@@ -8,7 +8,10 @@
   <package id="Google.Apis.Translate.v2" version="1.62.0.875" targetFramework="net48" />
   <package id="Google.Cloud.Translation.V2" version="3.2.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="7.0.4" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="NUnit" version="3.13.3" targetFramework="net48" />
   <package id="NUnit3TestAdapter" version="4.5.0" targetFramework="net48" />
