--- a/src/BackTranslationHelper/BackTranslationHelper.csproj
+++ b/src/BackTranslationHelper/BackTranslationHelper.csproj
@@ -105,15 +105,21 @@
     <Compile Include="BackTranslationHelperModel.cs" />
     <Compile Include="FindReplaceHelper.cs" />
     <Compile Include="IBackTranslationHelperDataSource.cs" />
-    <Compile Include="TranslatorListForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="TranslatorListForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TranslatorListForm.Designer.cs">
+      <DependentUpon>TranslatorListForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="TranslatorListForm.resx">
+      <DependentUpon>TranslatorListForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -125,13 +131,10 @@
       <DependentUpon>BackTranslationHelperCtrl.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="TranslatorListForm.resx">
-      <DependentUpon>TranslatorListForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -154,6 +157,7 @@
     <Content Include="html\BackTranslationHelperHtmlPage.html" />
     <Content Include="html\BackTranslationHelperJavaScriptFunctions.js" />
     <Content Include="html\jquery-3.6.0.min.js" />
+    <None Include="Resources\FillUpHS.png" />
     <None Include="Resources\pinup.bmp" />
     <None Include="Resources\pindown.bmp" />
   </ItemGroup>
