--- a/src/TestEncCnvtrs/packages.config
+++ b/src/TestEncCnvtrs/packages.config
@@ -15,6 +15,7 @@
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="NUnit" version="3.13.3" targetFramework="net48" />
   <package id="NUnit3TestAdapter" version="4.5.0" targetFramework="net48" />
+  <package id="Python.Runtime.AllPlatforms" version="3.7.2.4" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
