--- a/src/EcTranslators/app.config
+++ b/src/EcTranslators/app.config
@@ -137,6 +137,12 @@
      </ArrayOfString>
     </value>
    </setting>
+   <setting name="NllbTranslatorKey" serializeAs="String">
+    <value>R2HnnkY7wjy5XeaTWPpfig==</value>
+   </setting>
+   <setting name="NllbTranslatorKeyOverride" serializeAs="String">
+    <value />
+   </setting>
   </SilEncConverters40.EcTranslators.Properties.Settings>
 	</userSettings>
 </configuration>
