--- a/src/EcTranslators/EcTranslators.csproj
+++ b/src/EcTranslators/EcTranslators.csproj
@@ -27,7 +27,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>$(SolutionDir)output\$(Platform)\$(Configuration)\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;X64</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <LangVersion>8.0</LangVersion>
@@ -35,7 +35,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>$(SolutionDir)output\$(Platform)\$(Configuration)\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;X64</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
@@ -152,6 +152,16 @@
     <Compile Include="GoogleTranslator\QueryForGoogleCredentials.Designer.cs">
       <DependentUpon>QueryForGoogleCredentials.cs</DependentUpon>
     </Compile>
+    <Compile Include="NllbTranslator\NllbTranslatorAutoConfigDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NllbTranslator\NllbTranslatorAutoConfigDialog.designer.cs">
+      <DependentUpon>NllbTranslatorAutoConfigDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NllbTranslator\NllbTranslatorEncConverterConfig.cs" />
+    <Compile Include="NllbTranslator\NllbTranslatorEncConverter.cs" />
+    <Compile Include="NllbTranslator\NllbTranslator.cs" />
+    <Compile Include="NllbTranslator\NllbTextResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -197,6 +207,9 @@
     <EmbeddedResource Include="GoogleTranslator\QueryForGoogleCredentials.resx">
       <DependentUpon>QueryForGoogleCredentials.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="NllbTranslator\NllbTranslatorAutoConfigDialog.resx">
+      <DependentUpon>NllbTranslatorAutoConfigDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -214,6 +227,8 @@
       <Link>FieldWorks.snk</Link>
     </None>
     <None Include="app.config" />
+    <None Include="DeepLTranslator\DeepL\LICENSE" />
+    <EmbeddedResource Include="NllbTranslator\NllbHumanReadableLgNames.json" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
