fixed the pyscript by removing the removed package from the *.csproj file and added both the Win32 and x64 builds to the GHA yaml file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
        fail-fast: false
        matrix:
          build_configuration: ["Debug", "Release"]
+         build_platform: ["x64", "Win32"]
 
     steps:
     - name: Checkout
@@ -36,7 +37,7 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration=${{matrix.build_configuration}} "${{env.SOLUTION_FILE_PATH}}"
+      run: msbuild /m /p:Configuration=${{matrix.build_configuration}} /p:Platform=${{ matrix.build_platform }} "${{env.SOLUTION_FILE_PATH}}"
 
     - name: List Files in Repository
       run: dir /s
