--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,11 +41,11 @@ jobs:
 
     - name: Copy files to common location
       run: |
-        cp -r ./output/${{ matrix.build_platform }}/${{ matrix.build_configuration }}/* ./output/Common/${{ matrix.build_platform }}/${{ matrix.build_configuration }}
+        cp -r ./output/${{ matrix.build_platform }}/${{ matrix.build_configuration }}/* ./Common/${{ matrix.build_platform }}/${{ matrix.build_configuration }}
       
     - name: Copy files back for nuget packaging
       run: |
-        cp -r ./output/Common/* ./output
+        cp -r ./Common/* ./output
       
     - name: List Files in Repository
       run: dir /s
