--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,13 +41,14 @@ jobs:
 
     - name: Copy files to common location
       run: |
-        xcopy /s /i .\output\${{ matrix.build_platform }}/${{ matrix.build_configuration }}\* .\Common\${{ matrix.build_platform }}/${{ matrix.build_configuration }}\
+        xcopy /s /y .\output\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\* .\Common\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\
+        shell: cmd
         # cp -r ./output/${{ matrix.build_platform }}/${{ matrix.build_configuration }}/* ./Common/${{ matrix.build_platform }}/${{ matrix.build_configuration }}
       
     - name: Copy files back for nuget packaging
       run: |
         cp -r ./Common/* ./output
-      
+
     - name: List Files in Repository
       run: dir /s
       shell: cmd
