when copying back to output (so nuspec can find them) use xcopy, bkz cp doesn't like to overwrite

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,9 +43,9 @@ jobs:
       run: |
         xcopy /s /y .\output\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\* .\Common\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\
       
-    - name: Copy files back for nuget packaging
+    - name: Copy files back for nuget packaging (bkz nuspec is looking for them in the output folder)
       run: |
-        cp -r ./Common/* ./output
+        xcopy /y .\Common]* .\output
 
     - name: List Files in Repository
       run: dir /s
