--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,22 +42,25 @@ jobs:
     - name: Copy files to common location
       run: |
         xcopy /s /y .\output\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\* .\Common\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\
-      
+
+  publish_nuget:
+    runs-on: windows-2019
+    steps:
     - name: Copy files back for nuget packaging (bkz nuspec is looking for them in the output folder) during the 'Release' build (bkz both platforms will have been finished by then)
-      if: matrix.build_configuration == 'Release'
+      if: matrix.build_configuration == 'Release' && matrix.build_platform == 'Win32'
       run: |
-        xcopy /s /y .\Common\${{matrix.build_platform}}\* .\output\${{matrix.build_platform}}
+        xcopy /s /y .\Common\* .\output
 
     - name: List Files in Repository
       run: dir /s
       shell: cmd
 
     - name: Create NuGet Package
-      if: matrix.build_platform == 'Win32'
+      if: matrix.build_configuration == 'Release' && matrix.build_platform == 'Win32'
       run: nuget pack ./Package.${{matrix.build_configuration}}.nuspec -OutputDirectory ./output/${{matrix.build_configuration}}
 
     - name: Upload NuGet Package as Artifact
-      if: matrix.build_platform == 'Win32'
+      if: matrix.build_configuration == 'Release' && matrix.build_platform == 'Win32'
       uses: actions/upload-artifact@v2
       with:
         name: ${{matrix.build_configuration}}-nuget-package
