--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
 
     - name: Copy files to common location
       run: |
-        xcopy /y .\output\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\* .\Common\${{ matrix.build_platform }}\${{ matrix.build_configuration }}
+        xcopy /y .\output\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\* .\Common\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\
 
     - name: Wait for Matrix Files to be copied
       if: matrix.build_configuration == 'Release' && matrix.build_platform == 'x64'
@@ -59,6 +59,9 @@ jobs:
               exit 0
           } else {
               Write-Host "Waiting for files to exist..."
+              Get-ChildItem -Path .\Common\Win32\Debug
+              Get-ChildItem -Path .\Common\Win32\Release
+              Get-ChildItem -Path .\Common\x64\Debug
               Start-Sleep -Seconds 5
               $timeout += 5
           }
