--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,10 +43,10 @@ jobs:
       with:
         name: build-artifacts-${{ matrix.build_platform }}-${{ matrix.build_configuration }}
         path: |
-          .\*\output\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\*.exe
-          .\*\output\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\*.dll
-          .\*\output\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\*.tlb
-          .\*\output\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\*.config
+          '*\output\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\*.exe'
+          '*\output\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\*.dll'
+          '*\output\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\*.tlb'
+          '*\output\${{ matrix.build_platform }}\${{ matrix.build_configuration }}\*.config'
           retention-days: 1
 
   publish_nuget:
