--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,7 +84,9 @@ jobs:
             }
 
             $destination = "output\$platform\$configuration\"
-            xcopy /y "$folderName\*.*" $destination
+            $source = "$folderName\*.*"
+            "xcopy /y $source $destination"
+            xcopy /y $source $destination
           }
 
     - name: List Files in Repository
